==> shaoyuancc/stm32f401_rover_firmware/Drivers/MPU6500_WE.cpp <==
#include "MPU6500_WE.h"

bool MPU6500_WE::init(uint8_t const expectedValue){
//    if(useSPI){
//        pinMode(csPin, OUTPUT);
//        digitalWrite(csPin, HIGH);
//        _spi->begin();
//        mySPISettings = SPISettings(8000000, MSBFIRST, SPI_MODE0);
//    }
    reset_MPU9250();
    writeMPU9250Register(REGISTER_INT_PIN_CFG, REGISTER_VALUE_BYPASS_EN);  // Bypass Enable
    HAL_Delay(10);
    uint8_t wai = whoAmI();
    if(whoAmI() != expectedValue){
        return false;
    }

    accOffsetVal.x = 0.0;
    accOffsetVal.y = 0.0;
    accOffsetVal.z = 0.0;
    accRangeFactor = 1;
    gyrOffsetVal.x = 0.0;
    gyrOffsetVal.y = 0.0;
    gyrOffsetVal.z = 0.0;
    gyrRangeFactor = 1;
    fifoType = MPU9250_FIFO_ACC;
    sleep(false);

    return true;
}

bool MPU6500_WE::init(){
    return init(WHO_AM_I_CODE);
}

void MPU6500_WE::writeMPU9250Register(uint8_t reg, uint8_t val){
    HAL_I2C_Mem_Write(_i2cHandle, i2cAddress, reg, 1, &val, 1, I2C_TIMEOUT);

//    if(!useSPI){
//    }
//    else{
//        _spi->beginTransaction(mySPISettings);
//        digitalWrite(csPin, LOW);
//        _spi->transfer(reg);
//        _spi->transfer(val);
//        digitalWrite(csPin, HIGH);
//        _spi->endTransaction();
//    }
}

uint8_t MPU6500_WE::readMPU9250Register8(uint8_t reg){
    uint8_t regValue = 0;
    HAL_I2C_Mem_Read(_i2cHandle, i2cAddress, reg, 1, &regValue, 1, I2C_TIMEOUT);
    return regValue;
//    if(!useSPI){
//    }
//    else{
//        reg |= 0x80;
//        _spi->beginTransaction(mySPISettings);
//        digitalWrite(csPin, LOW);
//        _spi->transfer(reg);
//        regValue = _spi->transfer(0x00);
//        digitalWrite(csPin, HIGH);
//        _spi->endTransaction();
//    }
}

int16_t MPU6500_WE::readMPU9250Register16(uint8_t reg){
    uint8_t tempData[2];
    int16_t regValue = 0;

    if (HAL_I2C_Mem_Read(_i2cHandle, i2cAddress, reg, 1, tempData, 2, I2C_TIMEOUT) == HAL_OK){
        regValue = ((uint8_t) tempData[0]<<8) + (uint8_t) tempData[1];
    }

    return regValue;

//    if(!useSPI){
//    }
//    else{
//        reg |= 0x80;
//        _spi->beginTransaction(mySPISettings);
//        digitalWrite(csPin, LOW);
//        _spi->transfer(reg);
//        MSByte = _spi->transfer(0x00);
//        LSByte = _spi->transfer(0x00);
//        digitalWrite(csPin, HIGH);
//        _spi->endTransaction();
//    }
}

uint64_t MPU6500_WE::readMPU9250Register3x16(uint8_t reg){
    uint8_t mpu9250Triple[6];
    uint64_t regValue = 0;
    
    if (HAL_I2C_Mem_Read(_i2cHandle, i2cAddress, reg, 1, mpu9250Triple, 6, I2C_TIMEOUT) == HAL_OK){
          regValue = ((uint64_t) mpu9250Triple[0]<<40) + ((uint64_t) mpu9250Triple[1]<<32) +((uint64_t) mpu9250Triple[2]<<24) +
              + ((uint64_t) mpu9250Triple[3]<<16) + ((uint64_t) mpu9250Triple[4]<<8) +  (uint64_t) mpu9250Triple[5];
    }
    return regValue;

//    if(!useSPI){
//        _wire->beginTransmission(i2cAddress);
//        _wire->write(reg);
//        _wire->endTransmission(false);
//        _wire->requestFrom(i2cAddress,6);
//        if(_wire->available()){
//            for(int i=0; i<6; i++){
//                mpu9250Triple[i] = _wire->read();
//            }
//        }
//    }
//    else{
//        reg |= 0x80;
//        _spi->beginTransaction(mySPISettings);
//        digitalWrite(csPin, LOW);
//        _spi->transfer(reg);
//        for(int i=0; i<6; i++){
//                mpu9250Triple[i] = _spi->transfer(0x00);
//        }
//        digitalWrite(csPin, HIGH);
//        _spi->endTransaction();
//    }
}

xyzFloat MPU6500_WE::readMPU9250xyzValFromFifo(){
    uint8_t fifoTriple[6];
    xyzFloat xyzResult = {0.0, 0.0, 0.0};

    if (HAL_I2C_Mem_Read(_i2cHandle, i2cAddress, REGISTER_FIFO_R_W, 1, fifoTriple, 6, I2C_TIMEOUT) == HAL_OK){
        xyzResult.x = static_cast<float>((int16_t)((fifoTriple[0]<<8) + fifoTriple[1]));
        xyzResult.y = static_cast<float>((int16_t)((fifoTriple[2]<<8) + fifoTriple[3]));
        xyzResult.z = static_cast<float>((int16_t)((fifoTriple[4]<<8) + fifoTriple[5]));
    }

    return xyzResult;

//    if(!useSPI){
//    }
//    else{
//        uint8_t reg = REGISTER_FIFO_R_W | 0x80;
//        _spi->beginTransaction(mySPISettings);
//        digitalWrite(csPin, LOW);
//        _spi->transfer(reg);
//        for(int i=0; i<6; i++){
//                fifoTriple[i] = _spi->transfer(0x00);
//        }
//        digitalWrite(csPin, HIGH);
//        _spi->endTransaction();
//    }
}
